--- a/blocks/content.css
+++ b/blocks/content.css
@@ -13,7 +13,7 @@
   .content {
     display: flex;
     flex-direction: column;
-    background-color: brown;
+    background-color: #fcf5e5;
     min-width: 320px;
     margin: 0;
     padding: 34px 0 60px;
