--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,7 +2,7 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 0;
-  background-color: beige;
+  background-color: #fcf5e5;
   display: flex;
   flex-direction: column;
   justify-content: center;
