--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,4 +1,7 @@
 .footer {
   text-align: center;
-  margin-top: 60px;
+  margin: 60px auto 0;
+  padding-bottom: 60px;
+  font-family: "Poppins";
+  font-weight: 400;
 }
