--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,13 @@
 .header {
   display: flex;
   width: 100%;
-  background-color: white;
-  height: 46px;
-  z-index: 1;
+  background-color: #fff;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+.header__logo {
+  margin: 0 auto;
+  width: 94px;
+  height: 26px;
 }
