--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,13 @@
 .page {
   max-width: 1440px;
-  margin: 0 auto;
-  padding: 0;
+  min-height: 100vh;
   background-color: #fcf5e5;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+}
+
+.page__section {
+  max-width: 1280px;
+  margin: 0 auto;
 }
