--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,162 +1,139 @@
 .profile {
   box-sizing: border-box;
-  padding: 0 0 20px;
-  /* margin: 0 0 20px; */
+  padding: 34px 0 20px;
+  margin: 0 auto 20px;
   max-width: 1280px;
   display: flex;
-  flex-direction: row;
-  justify-content: start;
-  border-bottom: 1px solid;
-  background-color: #fcf5e5;
-  min-width: 420px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
-.button__add-new {
+.profile__add-btn {
   margin: auto 0 0 auto;
   border-radius: 8px;
   height: 52px;
   width: 137px;
   background-color: #212121;
   color: #fff;
-  font-family: "Poppins500";
+  font-family: "Poppins";
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
   text-align: center;
 }
 
-.button__add-new:hover {
+.profile__add-btn:hover {
   opacity: 0.8;
 }
 
-.profile__pic {
+.profile__avatar {
   width: 190px;
   height: 190px;
   border-radius: 8px;
+  margin-right: 20px;
 }
 
 .profile__info {
   display: flex;
   flex-direction: column;
-  margin: 0 0 0 20px;
-  max-width: 420px;
 }
 
 .profile__name {
   padding: 0;
   margin: 0;
 
-  font-family: "Poppins500";
+  font-family: "Poppins";
+  font-weight: 500;
   font-size: 32px;
   line-height: 32px;
   text-align: left;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
-.profile__profession {
-  margin: 12px 0 auto;
-  font-family: "Poppins500";
+.profile__description {
+  margin-top: 12px;
+  font-family: "Poppins";
+  font-weight: 500;
   font-size: 16px;
   line-height: 16px;
   text-align: left;
+  color: rgba(33, 33, 33, 0.7);
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
-.button__edit {
+.profile__edit-btn {
   color: #212121;
   opacity: 0.7;
-  margin: auto 0 0;
+  margin-top: auto;
   padding: 0;
   background: none;
   border: none;
   align-items: center;
   gap: 8px;
   display: flex;
-  font-family: "Poppins500";
+  font-family: "Poppins";
+  font-weight: 500;
   font-size: 16px;
   line-height: 16px;
   text-align: left;
   max-width: 108px;
 }
 
-.button__edit:hover {
+.profile__edit-btn:hover {
   opacity: 1;
 }
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 627px) {
   .profile {
-    box-sizing: border-box;
-    padding: 20px 16px 20px;
-    margin: 0;
-    max-width: 1280px;
-    min-width: 320px;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    border-bottom: 1px solid;
-    background-color: #fcf5e5;
-    text-align: center;
+    align-items: center;
+    padding-top: 20px;
   }
 
-  .profile__pic {
+  .profile__avatar {
     width: 80px;
     height: 80px;
     border-radius: 8px;
-    margin: 0 auto;
-  }
-
-  .profile__name {
-    padding: 0;
-    margin: 12px auto 0;
-
-    font-family: "Poppins500";
-    font-size: 20px;
-    line-height: 20px;
-    text-align: center;
+    margin-right: 0;
+    padding-bottom: 12px;
   }
 
   .profile__info {
     display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    margin: 0 0 0 20px;
+    text-align: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .profile__edit-btn {
+    margin: 16px auto 20px;
   }
 
-  .profile__profession {
-    margin: 12px auto 0;
-    font-family: "Poppins500";
-    font-size: 16px;
-    line-height: 16px;
-    text-align: left;
+  .profile__add-btn {
+    margin: 0 auto;
   }
 
-  .button__add-new {
-    display: block;
-    margin: 20px auto 0;
-    border-radius: 8px;
-    height: 52px;
-    width: 100%;
-    background-color: #212121;
-    color: #fff;
-    font-family: "Poppins500";
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 16px;
+  .profile__name {
+    margin: 0 auto 6px;
+    font-size: 20px;
+    line-height: 20px;
+    max-width: 288px;
     text-align: center;
   }
 
-  .button__edit {
-    color: #212121;
-    opacity: 0.7;
-    margin: 32px auto 0;
-    padding: 0;
-    background: none;
-    border: none;
-    text-align: center;
-    align-items: center;
-    gap: 8px;
-    display: flex;
-    font-family: "Poppins500";
+  .profile__description {
     font-size: 16px;
     line-height: 16px;
-    max-width: 108px;
+    text-align: center;
   }
 }
