--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,9 @@
-.footer {
+.footer__copyright {
   text-align: center;
-  margin: 60px auto 0;
-  padding-bottom: 60px;
-  font-family: "Poppins";
+  margin: 0 auto;
+  padding: 60px 0;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
 }
