--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,7 +4,7 @@
   background-color: #fcf5e5;
   text-align: center;
   margin: 0 auto;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 .page__section {
