--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,67 +1,66 @@
-.modal__container {
+.modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(33, 33, 33, 0.4);
-  width: 100%;
-  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 5;
+  padding: 0 20px;
   visibility: visible;
 }
 
-.title {
-  font-size: 32px;
-  line-height: 32px;
+.modal_opened {
+  visibility: visible;
 }
 
-.form__field {
-  background-color: rgba(255, 255, 255, 1);
-  width: 730px;
-  /* height: 408px; */
+.modal__title {
+  font-size: 32px;
+  line-height: 1;
+  margin: 0 0 32px;
+}
+
+.modal__container {
+  box-sizing: border-box;
+  background: #fff;
+  max-width: 730px;
+  width: 100%;
   border-radius: 8px;
   padding: 32px 50px;
   text-align: left;
-  border: none;
+  position: relative;
 }
 
-.form__label {
-  display: block;
+.modal__label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   text-align: left;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
-  /* line-height: 17.6px; */
+  line-height: 1;
+  margin-bottom: 32px;
 }
 
-.form__input {
+.modal__input {
   display: block;
   width: 100%;
-  padding: 12px 16px;
-  margin-top: 8px;
-  margin-bottom: 32px;
+  padding: 16px 12px;
   box-sizing: border-box;
   height: 52px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 20px;
-  line-height: 30px;
+  line-height: 1;
   border-radius: 4px;
   border-color: #838383;
 }
 
-.modal__top {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-}
-
-.close__btn {
+.modal__close-btn {
   width: 40px;
   height: 40px;
   border: none;
@@ -69,19 +68,21 @@
   background: none;
   padding: 0;
   cursor: pointer;
-  align-items: center;
+  position: absolute;
+  top: 32px;
+  right: 50px;
 }
 
-.close__btn:hover {
+.modal__close-btn:hover {
   opacity: 1;
 }
 
-.profile__save-btn {
+.modal__submit-btn {
   cursor: pointer;
-  margin: auto 0 0 auto;
   border-radius: 8px;
   height: 52px;
   width: 157px;
+  padding: 18px 0;
   background-color: #212121;
   color: #fff;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
@@ -91,30 +92,40 @@
   text-align: center;
 }
 
-.modal_opened {
-  visibility: visible;
-}
-
-@media screen and (max-width: 850px) {
-  .form__field {
-    margin: 10px;
+@media screen and (max-width: 627px) {
+  .modal {
+    padding: 0 10px;
   }
-}
-@media screen and (max-width: 600px) {
+
+  .modal__container {
+    padding: 12px;
+  }
+
   .profile__save-btn {
     width: 100%;
     margin: 0 auto;
   }
 
-  .form__label {
+  .modal__label {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }
+
+  .modal__input {
     font-size: 16px;
   }
 
-  .title {
+  .modal__title {
     font-size: 20px;
+    margin: 10px 0 34px;
   }
 
-  .form__field {
-    padding: 12px;
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+  }
+
+  .modal__submit-btn {
+    width: 100%;
   }
 }
