--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   max-width: 413px;
+  position: relative;
 }
 
 .card__image {
@@ -8,6 +9,25 @@
   width: 413px;
   object-fit: cover;
   display: block;
+}
+
+.card__delete-button {
+  cursor: pointer;
+  background-image: url(../images/delete.svg);
+  margin: 0px;
+  padding: 0;
+  width: 32px;
+  height: 32px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+}
+
+.card__delete-button:hover {
+  background-image: url(../images/delete-hover.svg);
 }
 
 .card__content {
@@ -42,10 +62,21 @@
   height: 20px;
   border: none;
   background-color: transparent;
-  opacity: 40%;
+  opacity: 0.4;
 }
 
 .card__like-button:hover {
+  opacity: 1;
+}
+
+.card__like-button_liked {
+  background-image: url(../images/liked.svg);
+  background-repeat: no-repeat;
+  opacity: 1;
+}
+
+.card__like-button_liked:hover {
+  background-image: url(../images/liked-hover.svg);
   opacity: 1;
 }
 
