--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -50,13 +50,9 @@
 .modal__container_type_preview {
   display: flex;
   flex-direction: column;
-  align-content: center;
   box-sizing: border-box;
-  background: #fff;
   max-width: 730px;
   border-radius: 8px;
-  padding: 32px 50px;
-  text-align: left;
   position: relative;
   padding: 0;
   gap: 8px;
@@ -156,7 +152,9 @@
   }
 
   .modal__container {
+    text-align: center;
     padding: 12px;
+    margin: 0;
   }
 
   .profile__save-btn {
@@ -188,9 +186,9 @@
   }
 
   .modal__image {
-    width: 100%;
-    object-fit: contain;
-    max-width: 80vw;
+    /* width: 100%; */
+    object-fit: cover;
+    /* max-width: 80vw; */
     max-height: 80vh;
     border-radius: 8px;
   }
@@ -203,9 +201,6 @@
   .modal__container_type_preview {
     display: flex;
     width: 100%;
-    border-radius: 8px;
     padding: 0;
-    gap: 8px;
-    background: transparent;
   }
 }
