--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,12 +1,3 @@
-@keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -21,11 +12,14 @@
   z-index: 5;
   padding: 0 20px;
   visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 .modal_opened {
-  animation: fadein 0.5s;
   visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__title {
